5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1642_2449.log
== TEST (2019-04-13 13:17:22) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x1 = c * e - b * f
x2 = a * e - b * d
y1 = a * f - c * d
x = x1/x2
y = y1/x2
if (x2 == 0):
	mensagem = "Nao tem solucao"
else:
	mensagem = x " e " y

print(mensagem)
-- ERROR:
File "XXXX", line 15
    mensagem = x " e " y
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 13:21:41) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x1 = (c * e) - (b * f)
x2 = (a * e) - (b * d)
y1 = (a * f) - (c * d)
x = x1/x2
y = y1/x2
if (x2 == 0):
	mensagem = "Nao tem solucao"
	mensagem2 = "Nao tem solucao"
else:
	mensagem = x 
	mensagem2 = y

print(mensagem)
print(mensagem2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 13:24:25) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x1 = (c * e) - (b * f)
x2 = (a * e) - (b * d)
y1 = (a * f) - (c * d)
x = x1/x2
y = y1/x2
if (x2 == 0):
	mensagem = "Nao tem solucao"
	mensagem2 = "Nao tem solucao"
else:
	mensagem = x 
	mensagem2 = y

print(mensagem)
print(mensagem2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 13:24:51) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x1 = (c * e) - (b * f)
x2 = (a * e) - (b * d)
y1 = (a * f) - (c * d)
x = x1/x2
y = y1/x2
if (x2 == 0):
	mensagem = "Nao tem solucao"
	mensagem2 = "Nao tem solucao"
else:
	mensagem = x 
	mensagem2 = y

print(mensagem)
print(mensagem2)
-- EXECUTION TIME:
0.174682
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 13:27:56) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x1 = (c * e) - (b * f)
x2 = (a * e) - (b * d)
y1 = (a * f) - (c * d)
x = x1/x2
y = y1/x2
if (x2 != 0):
	mensagem1 = x
	mensagem2 = y
else:
	mensagem1 = "Nao tem solucao" 
	mensagem2 = "Nao tem solucao"

print(mensagem1)
print(mensagem2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 13:28:14) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x1 = (c * e) - (b * f)
x2 = (a * e) - (b * d)
y1 = (a * f) - (c * d)
x = x1/x2
y = y1/x2
if (x2 != 0):
	mensagem1 = x
	mensagem2 = y
else:
	mensagem1 = "Nao tem solucao" 
	mensagem2 = "Nao tem solucao"

print(mensagem1)
print(mensagem2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 13:28:32) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x1 = (c * e) - (b * f)
x2 = (a * e) - (b * d)
y1 = (a * f) - (c * d)
x = x1/x2
y = y1/x2
if (x2 != 0):
	mensagem1 = x
	mensagem2 = y
else:
	mensagem1 = "Nao tem solucao" 
	mensagem2 = "Nao tem solucao"

print(mensagem1)
print(mensagem2)
-- EXECUTION TIME:
0.134035
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 16:06:59) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x1 = (c * e) - (b * f)
x2 = (a * e) - (b * d)
y1 = (a * f) - (c * d)
x = x1/x2
y = y1/x2
if (x2 == 0):
	mensagem = "Nao tem solucao"
else:
	mensagem = x,y

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 16:07:22) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x1 = (c * e) - (b * f)
x2 = (a * e) - (b * d)
y1 = (a * f) - (c * d)
x = x1/x2
y = y1/x2
if (x2 == 0):
	mensagem = "Nao tem solucao"
else:
	mensagem = x,y

print(mensagem)
-- EXECUTION TIME:
0.161036
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 16:10:22) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x = (c * e) - (b * f)/(a * e) - (b * d)
y = (a * f) - (c * d)/ (a * e) - (b * d)
if ((a * e) - (b * d) == 0):
	mensagem = "Nao tem solucao"
else:
	mensagem = x,y

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 16:11:02) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x = (c * e) - (b * f)/(a * e) - (b * d)
y = (a * f) - (c * d)/ (a * e) - (b * d)
if ((a * e) - (b * d) == 0):
	mensagem = "Nao tem solucao"
else:
	mensagem = x,y

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 16:11:08) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x = (c * e) - (b * f)/(a * e) - (b * d)
y = (a * f) - (c * d)/ (a * e) - (b * d)
if ((a * e) - (b * d) == 0):
	mensagem = "Nao tem solucao"
else:
	mensagem = x,y

print(mensagem)
-- EXECUTION TIME:
0.125214
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 16:11:30) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x = (c * e) - (b * f)/(a * e) - (b * d)
y = (a * f) - (c * d)/ (a * e) - (b * d)
if ((a * e) - (b * d) == 0):
	mensagem = " Nao tem solucao"
else:
	mensagem = x,y

print(mensagem)
-- EXECUTION TIME:
0.202023
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 16:12:23) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x = (c * e) - (b * f)/(a * e) - (b * d)
y = (a * f) - (c * d)/ (a * e) - (b * d)
if ((a * e) - (b * d) == 0):
	mensagem = " Nao tem solucao"
else:
	mensagem = (x,y)

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 16:12:41) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x = (c * e) - (b * f)/(a * e) - (b * d)
y = (a * f) - (c * d)/ (a * e) - (b * d)
if ((a * e) - (b * d) == 0):
	mensagem = " Nao tem solucao"
else:
	mensagem = (x,y)

print(mensagem)
-- EXECUTION TIME:
0.184377
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 16:13:55) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x = (c * e) - (b * f)/(a * e) - (b * d)
y = (a * f) - (c * d)/ (a * e) - (b * d)
if ((a * e) - (b * d) != 0):
	mensagem = x,y
else:
	mensagem = "Nao tem solucao"

print(mensagem)
-- EXECUTION TIME:
0.123125
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:37:48) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x = (c * e) - (b * f)/(a * e) - (b * d)
y = (a * f) - (c * d)/ (a * e) - (b * d)
if ((a * e) - (b * d) == 0):
	mensagem = "Nao tem solucao"
else:
	mensagem = x, y

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:38:00) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x = (c * e) - (b * f)/(a * e) - (b * d)
y = (a * f) - (c * d)/ (a * e) - (b * d)
if ((a * e) - (b * d) == 0):
	mensagem = "Nao tem solucao"
else:
	mensagem = x, y

print(mensagem)
-- EXECUTION TIME:
0.144384
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:38:58) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x = (c * e) - (b * f)/(a * e) - (b * d)
y = (a * f) - (c * d)/ (a * e) - (b * d)
if ((a * e) - (b * d) == 0):
	mensagem = "Nao tem solucao"
else:
	mensagem = x, y

print(mensagem)
-- EXECUTION TIME:
0.260953
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:39:01) 
-- CODE:
a = int(input("escreva o valor do coeficiente a: "))
b = int(input("escreva o valor do coeficiente b: "))
c = int(input("escreva o valor do coeficiente c: "))
d = int(input("escreva o valor do coeficiente d: "))
e = int(input("escreva o valor do coeficiente e: "))
f = int(input("escreva o valor do coeficiente f: "))
x = (c * e) - (b * f)/(a * e) - (b * d)
y = (a * f) - (c * d)/ (a * e) - (b * d)
if ((a * e) - (b * d) == 0):
	mensagem = "Nao tem solucao"
else:
	mensagem = x, y

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
